@@ -8,14 +8,17 @@ import javax.swing.*;
 import java.awt.*;
 import java.awt.event.MouseAdapter;
 import java.awt.event.MouseEvent;
+import java.io.Serial;
 import java.util.Arrays;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.logging.Logger;
-import java.util.stream.Collectors;
 
 public class SwingBoard extends JComponent {
-    
+
+    @Serial
+    private static final long serialVersionUID = 1596893227284592045L;
+
     public enum GameStatus {
         GAME_RUNNING(""),
         GAME_OVER("Game Over"),
@@ -144,7 +147,7 @@ public class SwingBoard extends JComponent {
                             .filter(Field::isHidden)
                             .filter(pNeighbour -> pNeighbour.getStatus() != Status.MINE)
                             .filter(pNeighbour -> !fields.contains(pNeighbour))
-                            .collect(Collectors.toList())
+                            .toList()
             );
         }
     }
@@ -180,7 +183,7 @@ public class SwingBoard extends JComponent {
     private boolean checkWinConditions() {
         final List<Field> fields = Arrays.stream(board.getFields())
                 .flatMap(Arrays::stream)
-                .collect(Collectors.toList());
+                .toList();
         
         return fields.stream().allMatch(aField -> {
             if (aField.getStatus() != Status.MINE) {
